#11: Text align, readme, chrome fixes, demo application fixes

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -27,7 +27,6 @@
 
 .sidemenu {
   display: flex;
-  justify-content: center;
   text-align: left;
   padding-right: 40px;
 }
